--- a/app/src/main/res/layout/activity_railway.xml
+++ b/app/src/main/res/layout/activity_railway.xml
@@ -1,46 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.railway_services.indian.railway.RailwayActivity">
+    android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/pnrBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="take me to pnr activity" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
-
-    <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/recyclerView"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/mavenLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="8dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.railway_services.indian.railway.RailwayActivity">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="23dp"
+            android:elevation="8dp"
+            ads:cardElevation="8dp">
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
+            <RelativeLayout
+                android:id="@+id/layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/sourceLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Source Station :"
+                    android:textColor="#eaf8f8f8"
+                    android:textSize="16sp" />
+
+                <AutoCompleteTextView xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/sourceStationCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="30dp"
+                    android:layout_toRightOf="@id/sourceLabel"
+                    android:background="@android:color/transparent"
+                    android:gravity="right"
+                    android:paddingRight="16dp"
+                    android:textColor="#eaf8f8f8"
+                    android:textSize="15sp"
+
+                    android:hint="CNB" />
+
+                <TextView
+                    android:id="@+id/destinationLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/sourceLabel"
+                    android:layout_marginTop="25dp"
+                    android:text="Destination Station :"
+                    android:textColor="#eaf8f8f8"
+                    android:textSize="16sp" />
+
+                <AutoCompleteTextView xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/destinationStationCode"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/sourceStationCode"
+                    android:layout_marginTop="24dp"
+                    android:layout_toRightOf="@id/destinationLabel"
+                    android:background="@android:color/transparent"
+                    android:gravity="right"
+                    android:paddingRight="16dp"
+
+                    android:textColor="#eaf8f8f8"
+                    android:textSize="15sp"
+                    android:hint=" NDLS" />
+
+                <TextView
+                    android:id="@+id/datelabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/destinationLabel"
+                    android:layout_marginTop="21dp"
+                    android:text="Date:  "
+                    android:textColor="#eaf8f8f8"
+                    android:textSize="16sp" />
+
+                <Button xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/doj"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/destinationLabel"
+                    android:layout_marginTop="20dp"
+                    android:layout_toRightOf="@id/datelabel"
+                    android:background="@android:color/transparent"
+                    android:gravity="right"
+                    android:paddingRight="16dp"
+                    android:textColor="#eaf8f8f8"
+                    tools:text="25-05-2018" />
+
+
+                <ImageView
+                    android:id="@+id/go_find"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_below="@id/destinationLabel"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_toRightOf="@id/doj"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_arrow_forward_black_24dp" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:elevation="6dp"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/recyclerView"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            ads:adSize="BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id" />
-    </android.support.design.widget.CoordinatorLayout>
+            android:layout_below="@id/cardView"
+            android:elevation="8dp"
+            android:padding="2dp" />
 
-</RelativeLayout>
+        <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/recyclerView"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/banner_ad_unit_id" />
+        </android.support.design.widget.CoordinatorLayout>
+
+
+    </RelativeLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:src="@drawable/tbsvector" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="50dp"
+        android:layout_height="54dp"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_arrow_forward_black_24dp"
+        app:layout_anchor="@id/layout"
+        app:layout_anchorGravity="bottom|right|end" />
+</android.support.design.widget.CoordinatorLayout>
