--- a/app/src/main/res/layout/activity_railway.xml
+++ b/app/src/main/res/layout/activity_railway.xml
@@ -49,11 +49,11 @@
                     android:layout_toRightOf="@id/sourceLabel"
                     android:background="@android:color/transparent"
                     android:gravity="right"
+                    android:hint="CNB"
                     android:paddingRight="16dp"
                     android:textColor="#eaf8f8f8"
-                    android:textSize="15sp"
-
-                    android:hint="CNB" />
+                    android:textColorHint="#b5b5b5"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/destinationLabel"
@@ -75,11 +75,11 @@
                     android:layout_toRightOf="@id/destinationLabel"
                     android:background="@android:color/transparent"
                     android:gravity="right"
+                    android:hint=" NDLS"
                     android:paddingRight="16dp"
-
                     android:textColor="#eaf8f8f8"
-                    android:textSize="15sp"
-                    android:hint=" NDLS" />
+                    android:textColorHint="#b5b5b5"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/datelabel"
@@ -158,15 +158,10 @@
 
 
     </RelativeLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:src="@drawable/tbsvector" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="50dp"
+        android:layout_width="45dp"
         android:layout_height="54dp"
         android:layout_margin="16dp"
         android:clickable="true"
